# NoahGameFrame

./: .gitignore  NoahFrame.sln
Dependencies/: copy_mysql.bat  copy_mysql.sh
NFClient/NFClientPlugin/: CMakeLists.txt  NFCClientModule.cpp  NFCClientModule.h  NFCPlayerModule.cpp  NFCPlayerModule.h  NFCPropertyModule.cpp  NFCPropertyModule.h  NFCRecordModule.cpp  NFCRecordModule.h  NFClientPlugin.cpp  NFClientPlugin.filters  NFClientPlugin.h  NFClientPlugin.vcxproj  dllmain.cpp  新建文本文档.txt
NFComm/NFMessageDefine/: NFDefine.cs  NFDefine.pb.cc  NFDefine.pb.h  NFDefine.proto  NFMessageDefine.vcxproj  NFMessageDefine.vcxproj.filters  NFMsgDefine.h  NFMsgMysql.pb.cc  NFMsgMysql.pb.h  NFMsgMysql.proto  NFProtocolDefine.hpp  cpp.bat
NFComm/NFMysqlPlugin/: NFCAsyMysqlModule.cpp  NFCMysqlDriver.cpp
NFComm/NFPluginModule/: NFIAsyMysqlModule.h  NFICommonMysqlModule.h  NFICreateRoleModule.h  NFIMysqlModule.h
NFServer/NFDBMysqlLogicPlugin/: CMakeLists.txt  NFCCommonMysqlModule.cpp  NFCCommonMysqlModule.h  NFCPlayerMysqlModule.cpp  NFCPlayerMysqlModule.h  NFDBMysqlLogicPlugin.cpp  NFDBMysqlLogicPlugin.h  NFDBMysqlLogicPlugin.vcxproj
NFServer/NFDBNet_ServerPlugin/: NFCDBNet_ServerModule.cpp  NFCDBNet_ServerModule.h  NFDBNet_ServerModule.cpp  NFDBNet_ServerModule.h
NFServer/NFGameLogicPlugin/: NFCCreateRoleModule.cpp  NFCreateRoleModule.cpp  NFCreateRoleModule.h
NFTools/NFFileProcess/: NFFileProcess.cpp  NFFileProcess.h
Tutorial/Tutorial5/: HelloWorld.cpp
_Out/: runr_ai.bat
_Out/NFDataCfg/Debug/: PluginAI.xml
_Out/NFDataCfg/Excel/: Client.xlsx  IObject.xlsx  Skill.xlsx  SqlServer.xlsx
_Out/NFDataCfg/Ini/: Scene.xml  Server.xml  Skill.xml  SqlServer.xml
_Out/NFDataCfg/Release/: PluginX.xml
_Out/NFDataCfg/Struct/: Client.xml  LogicClass.xml  NFrame.sql  (+2 more)
_Out/Redis-x64-3.2.100/: dump.rdb  redis.windows-service.conf  redis.windows.conf
(+24 files in other folders)
